fix: reemplazar List.of() por Collections.singletonList() para compatibilidad Java 8
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>